// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Collapse snapshot > Collapse demo snapshot 0 1`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 8px; --flex-wrap: wrap;"
  >
    <div
      class="bui-switch bui-switch-medium bui-switch-primary"
    >
      <input
        class="bui-switch-input"
        type="checkbox"
      />
    </div>
    <div
      class="bui-collapse"
      style="transition: none; width: 0px;"
    >
      <div
        class="bui-card"
        style="background: rgb(204, 204, 204); width: 100px; height: 100px;"
      />
    </div>
  </div>
</div>
`;

exports[`Collapse snapshot > Collapse demo snapshot 0 2`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 8px; --flex-wrap: wrap;"
  >
    <div
      class="bui-switch bui-switch-medium bui-switch-primary bui-switch-checked"
    >
      <input
        checked=""
        class="bui-switch-input"
        type="checkbox"
      />
    </div>
    <div
      class="bui-collapse"
      style="transition: none; height: auto;"
    >
      <div
        class="bui-card"
        style="background: rgb(204, 204, 204); width: 100px; height: 100px;"
      />
    </div>
  </div>
</div>
`;

exports[`Collapse snapshot > Collapse demo snapshot 0 3`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 8px; --flex-wrap: wrap;"
  >
    <div
      class="bui-switch bui-switch-medium bui-switch-primary bui-switch-checked"
    >
      <input
        checked=""
        class="bui-switch-input"
        type="checkbox"
      />
    </div>
    <div
      class="bui-collapse"
      style="transition: none; height: auto;"
    >
      <div
        class="bui-card"
        style="background: rgb(204, 204, 204); width: 100px; height: 100px;"
      />
    </div>
  </div>
</div>
`;

exports[`Collapse snapshot > Collapse demo snapshot 0 4`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 16px; --flex-wrap: nowrap;"
  >
    <button
      class="bui-btn bui-btn-outlined bui-btn-medium"
      type="button"
    >
      切换状态
    </button>
    <div
      class="bui-stack"
      style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 16px; --flex-wrap: nowrap;"
    >
      <div
        style="width: 120px;"
      >
        仅进入动画:
      </div>
      <div
        class="bui-collapse"
        style="transition: none; height: 0px;"
      >
        <div
          class="bui-card"
          style="background: rgb(204, 204, 204); width: 100px; height: 80px; padding: 8px;"
        >
          <div>
            瞬间退出，平滑进入
          </div>
        </div>
      </div>
    </div>
    <div
      class="bui-stack"
      style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 16px; --flex-wrap: nowrap;"
    >
      <div
        style="width: 120px;"
      >
        仅退出动画:
      </div>
      <div
        class="bui-collapse"
        style="transition: none; width: 0px;"
      >
        <div
          class="bui-card"
          style="background: rgb(204, 204, 204); width: 100px; height: 80px; padding: 8px;"
        >
          <div>
            瞬间进入，平滑退出
          </div>
        </div>
      </div>
    </div>
    <div
      class="bui-stack"
      style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 16px; --flex-wrap: nowrap;"
    >
      <div
        style="width: 120px;"
      >
        全部禁用:
      </div>
      <div
        class="bui-collapse"
        style="transition: none; height: 0px;"
      >
        <div
          class="bui-card"
          style="background: rgb(204, 204, 204); width: 100px; height: 80px; padding: 8px;"
        >
          <div>
            瞬间切换，无动画
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
